<resources>
    <!-- Meta Data Strings -->
    <string name="google_api_key">AIzaSyDBAq8NetYqGh9h1rq2QeKOZgW_VPIF6JE</string>
    <string name="app_name">BitBite</string>

    <!-- Generic -->
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="open">OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="dot">•</string>

    <!-- Options Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_about_us">About Us</string>
    <string name="action_rate_us">Rate Us</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="favorites_menu_clearlist">Clear Favorites</string>

    <!-- Splash Screen -->
    <string name="title_activity_splash">SplashActivity</string>

    <!-- MainActivity -->
    <string name="style_header">Style</string>
    <string name="style_display_text">Random</string>
    <string name="autocomplete_hint">Type of Food</string>
    <string name="price_header">Price</string>
    <string name="price_display_text">$$$$$</string>
    <string name="submit_button">Search</string>
    <string name="feeling_lucky_button">I\'m Feeling Lucky</string>

    <!-- Nav Bar -->
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>

    <!-- ResultsActivity -->
    <string name="title_activity_results">ResultsActivity</string>
    <string name="button_show_more">Show More</string>
    <string name="default_name">Not Available</string>
    <string name="default_price">$</string>

    <!-- LocationActivity -->
    <string name="button_directions">Directions</string>
    <string name="button_share">Share</string>
    <string name="button_call">Call</string>
    <string name="button_moreinfo">More Info</string>
    <string name="default_location"></string>
    <string name="open_title">Open Now: </string>
    <string name="default_open"></string>
    <string name="default_duration">N/A</string>
    <string name="default_distance">0 mi</string>
    <string name="default_favorites">Click to add to Favorites</string>
    <string name="default_already_favorited">Already in Favorites</string>
    <string name="default_clock"></string>

    <!-- MoreInfo Fragment -->
    <string name="default_rating"></string>
    <string name="review_see_more">See More >></string>
    <string name="default_website_title">Website: </string>
    <string name="default_website">Not Found</string>
    <string name="default_phone_title">Phone: </string>
    <string name="default_phone">Not Found</string>
    <string name="default_address">Not Found</string>
    <string name="moreinfo_reviews_card_title"><u>Reviews</u></string>
    <string name="moreinfo_moreinfo_card_title"><u>More Info</u></string>

    <!-- ReviewActivity -->
    <string name="make_review_title">Been Here?</string>
    <string name="make_review_description">Leave your own review!</string>
    <string name="default_review">"No reviews available."</string>
    <string name="default_review_author">"N/A"</string>
    <string name="default_description">N/A</string>

    <!-- Dialogs -->
    <string name="location_dialog">Help Us Locate You</string>
    <string name="location_edit_text">Address/Zip Code</string>
    <string name="dialog_confirmation_title">Are You Sure?</string>
    <string name="dialog_favorites_confirmation_text">Are you sure you want to clear your favorites list?</string>
    <string name="confirmation_text">Is the location below correct?</string>
    <string name="confirmation_checkbox">Use this as my default location?</string>
    <string name="default_technical_errors">Technical difficulties. Please try again.</string>


    <!-- Strings related to Settings -->

    <!-- ImageView Descriptions -->
    <string name="imageview_description_toolbar">Toolbar Logo</string>
    <string name="imageview_description_review_rating">Toolbar Logo</string>
    <string name="imageview_description_location_image">Location Image</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- FOOD TYPE OPTIONS -->
    <string-array name="style_array">
        <item>American</item>
        <item>Asian</item>
        <item>Bar</item>
        <item>Barbecue</item>
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Cafe</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>Coffee</item>
        <item>Cuban</item>
        <item>Dessert</item>
        <item>Fast Food</item>
        <item>French</item>
        <item>Gluten Free</item>
        <item>Greek</item>
        <item>Hamburgers</item>
        <item>Health</item>
        <item>Indian</item>
        <item>Israeli</item>
        <item>Italian</item>
        <item>Latin</item>
        <item>Market</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Random</item>
        <item>Seafood</item>
        <item>Soul Food</item>
        <item>Spanish</item>
        <item>Sushi</item>
        <item>Tavern</item>
        <item>Thai</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
    </string-array>

    <!-- Morning Styles Array -->
    <string-array name="styles_morning_array">
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Cafe</item>
        <item>Coffee</item>
        <item>Dessert</item>
        <item>Fast Food</item>
        <item>Health</item>
        <item>Indian</item>
        <item>Israeli</item>
        <item>Random</item>
    </string-array>

    <!-- Afternoon Styles Array -->
    <string-array name="styles_afternoon_array">
        <item>American</item>
        <item>Asian</item>
        <item>Bar</item>
        <item>Barbecue</item>
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Cafe</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>Coffee</item>
        <item>Cuban</item>
        <item>Dessert</item>
        <item>Fast Food</item>
        <item>French</item>
        <item>Greek</item>
        <item>Hamburgers</item>
        <item>Health</item>
        <item>Indian</item>
        <item>Israeli</item>
        <item>Italian</item>
        <item>Latin</item>
        <item>Market</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Random</item>
        <item>Seafood</item>
        <item>Soul Food</item>
        <item>Spanish</item>
        <item>Sushi</item>
        <item>Tavern</item>
        <item>Thai</item>
    </string-array>

    <!-- Night Styles Array -->
    <string-array name="styles_night_array">
        <item>American</item>
        <item>Asian</item>
        <item>Bar</item>
        <item>Barbecue</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>Cuban</item>
        <item>Dessert</item>
        <item>French</item>
        <item>Greek</item>
        <item>Hamburgers</item>
        <item>Health</item>
        <item>Indian</item>
        <item>Israeli</item>
        <item>Italian</item>
        <item>Latin</item>
        <item>Market</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Random</item>
        <item>Seafood</item>
        <item>Soul Food</item>
        <item>Spanish</item>
        <item>Sushi</item>
        <item>Tavern</item>
        <item>Thai</item>
    </string-array>

</resources>
