<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:transitionName="card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".MoreInfoCard">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/moreinfocard_card_icons"
        android:transitionName="top_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/big_card_margin"
        card_view:cardCornerRadius="@dimen/big_card_radius"
        card_view:cardElevation="@dimen/big_card_elevation"
        card_view:cardBackgroundColor="@color/card_light" >

        <LinearLayout
            android:id="@+id/moreinfocard_layout_icons"
            android:transitionName="icon_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/big_card_main_layout_margin"
            android:layout_gravity="start">
            <LinearLayout
                android:id="@+id/moreinfocard_layout_website"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/icon_margin"
                android:layout_marginBottom="@dimen/icon_margin"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitStart"
                    android:src="@drawable/website_icon"/>
                <TextView
                    android:id="@+id/moreinfocard_text_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/colorPrimary"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/default_phone" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/moreinfocard_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/icon_margin"
                android:layout_marginBottom="@dimen/icon_margin"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitStart"
                    android:src="@drawable/phone_icon"/>
                <TextView
                    android:id="@+id/moreinfocard_text_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/colorPrimary"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/default_phone" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/moreinfocard_layout_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/icon_margin"
                android:layout_marginBottom="@dimen/icon_margin"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitStart"
                    android:src="@drawable/address_icon"/>
                <TextView
                    android:id="@+id/moreinfocard_text_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/colorPrimary"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/default_address" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/moreinfocard_layout_distance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/icon_margin"
                android:layout_marginBottom="@dimen/icon_margin">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitStart"
                    android:src="@drawable/distance_icon"/>
                <TextView
                    android:id="@+id/moreinfocard_text_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/text_primary"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/default_distance" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/moreinfocard_layout_duration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/icon_margin"
                android:layout_marginBottom="@dimen/icon_margin">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitStart"
                    android:src="@drawable/car_icon"/>
                <TextView
                    android:id="@+id/moreinfocard_text_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/text_primary"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/default_duration" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/moreinfocard_layout_favorites"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/icon_margin"
                android:layout_marginBottom="@dimen/icon_margin"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:id="@+id/moreinfocard_icon_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitStart"
                    android:src="@drawable/favorites_icon"/>
                <TextView
                    android:id="@+id/moreinfocard_text_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/text_primary"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/default_favorites" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/moreinfocard_layout_clock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/icon_margin"
                android:layout_marginTop="@dimen/icon_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitStart"
                    android:src="@drawable/clock_icon" />

                <TextView
                    android:id="@+id/moreinfocard_text_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/default_clock"
                    android:textSize="@dimen/text_large" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/moreinfocard_card_review"
        android:transitionName="review_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/big_card_margin"
        card_view:cardCornerRadius="@dimen/big_card_radius"
        card_view:cardElevation="@dimen/big_card_elevation"
        card_view:cardBackgroundColor="@color/card_light">

        <LinearLayout
            android:id="@+id/moreinfocard_layout_reviews"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_card_main_layout_margin"
            android:orientation="vertical">
            <TextView
                android:id="@+id/moreinfocard_reviews_text"
                android:transitionName="review_text"
                android:layout_marginBottom="4dp"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/text_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="20"
                android:ellipsize="end"
                android:gravity="start"
                android:text="@string/default_review" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/moreinfocard_reviews_author"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/text_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/default_review_author" />
                <ImageView
                    android:id="@+id/moreinfocard_reviews_rating"
                    android:contentDescription="@string/imageview_description_review_rating"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="4dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/face_3" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/colorAccent"
                    android:text="@string/review_see_more" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/moreinfocard_card_buttons"
        android:transitionName="top_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/big_card_margin"
        card_view:cardCornerRadius="@dimen/big_card_radius"
        card_view:cardElevation="@dimen/big_card_elevation"
        card_view:cardBackgroundColor="@color/card_light">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_card_main_layout_margin"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/moreinfocard_button_share"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/button_padding"
                android:layout_margin="@dimen/button_margin"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_width="@dimen/location_icon_height"
                    android:layout_height="@dimen/location_icon_height"
                    android:scaleType="fitCenter"
                    android:src="@drawable/share_icon" />
                <TextView
                    android:textColor="@color/card_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/button_text_padding"
                    android:paddingStart="@dimen/button_text_padding"
                    android:textSize="@dimen/text_normal"
                    android:text="@string/button_share" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/moreinfocard_button_directions"
                style="@style/AppTheme.RoundedCornerMaterialButtonOutline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/button_padding"
                android:layout_margin="@dimen/button_margin"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_width="@dimen/location_icon_height"
                    android:layout_height="@dimen/location_icon_height"
                    android:scaleType="fitCenter"
                    android:src="@drawable/directions_icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:paddingEnd="@dimen/button_text_padding"
                    android:paddingStart="@dimen/button_text_padding"
                    android:textSize="@dimen/text_normal"
                    android:text="@string/button_directions" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/moreinfocard_button_call"
                style="@style/AppTheme.RoundedCornerMaterialButtonOutline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/button_margin"
                android:padding="@dimen/button_padding"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_width="@dimen/location_icon_height"
                    android:layout_height="@dimen/location_icon_height"
                    android:scaleType="fitCenter"
                    android:src="@drawable/phone_icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:paddingEnd="@dimen/button_text_padding"
                    android:paddingStart="@dimen/button_text_padding"
                    android:textSize="@dimen/text_normal"
                    android:text="@string/button_call" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>