<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/results_card"
    android:transitionName="top_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/big_card_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@color/card_light"
    card_view:cardCornerRadius="@dimen/card_radius"
    card_view:cardElevation="@dimen/card_elevation"
    tools:context=".ResultsCard" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/results_image"
            android:transitionName="place_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/resultscard_image_height"
            android:layout_marginBottom="2dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="fill_horizontal"
            android:src="@drawable/default_place_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/results_name"
                android:transitionName="place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/default_name"
                android:textSize="@dimen/text_large" />
            <ImageView
                android:id="@+id/results_rating"
                android:transitionName="place_rating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:padding="4dp"
                android:scaleType="fitEnd"
                android:src="@drawable/default_star" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/results_description"
                android:transitionName="place_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/text_secondary"
                android:text="@string/default_description" />
            <TextView
                style="@style/TextDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/results_price"
                android:transitionName="place_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/text_secondary"
                android:text="@string/default_price" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
